fix HotSpotStackWalker coverage issues