@@ -1,22 +1,16 @@
 package datadog.trace.util.stacktrace;
 
 import datadog.trace.api.Platform;
-import java.util.Iterator;
-import java.util.NoSuchElementException;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 public class HotSpotStackWalker extends AbstractStackWalker {
 
-  private static sun.misc.JavaLangAccess access;
+  sun.misc.JavaLangAccess access;
 
-  private static sun.misc.JavaLangAccess get() {
-    return sun.misc.SharedSecrets.getJavaLangAccess();
-  }
-
-  static {
+  HotSpotStackWalker() {
     try {
-      access = get();
+      access = sun.misc.SharedSecrets.getJavaLangAccess();
     } catch (Throwable e) {
     }
   }
@@ -36,34 +30,8 @@ public class HotSpotStackWalker extends AbstractStackWalker {
   @Override
   Stream<StackTraceElement> doGetStack() {
 
-    Throwable throwable = new Throwable();
-
     Iterable<StackTraceElement> iterable =
-        () ->
-            new Iterator<StackTraceElement>() {
-
-              int index = 0;
-
-              final int size = access.getStackTraceDepth(throwable);
-
-              @Override
-              public boolean hasNext() {
-                return index < size;
-              }
-
-              @Override
-              public StackTraceElement next() {
-                if (index >= size) {
-                  throw new NoSuchElementException();
-                }
-                return access.getStackTraceElement(throwable, index++);
-              }
-
-              @Override
-              public void remove() {
-                throw new UnsupportedOperationException();
-              }
-            };
+        () -> new HotSpotStackTraceIterator(new Throwable(), access);
 
     return StreamSupport.stream(iterable.spliterator(), false);
   }
